# RealstatsModelRollout

./: _version.py  pyproject.toml  setup.cfg  setup.py  test.py
.github/workflows/: Create_release_development.yml  create_release_development.yml  create_release_stable.yml  deploy_development.yml  python test 310.yml  python-publish.yml  python-publish_development.yml  python_test.yml  python_test_3-6.yml  python_test_310.yml  python_test_36.yml  python_test_38.yml
Documentation/: main.md
RealstatsModelRollout/: LICENSE.md  __init__.py  auth.py  dev_enviroment.py  devenviro.py  global_functions.py  model.py  settings.py  validate.py  versioning.py  vmachine.py
RealstatsModelRollout/src/: __init__.py  virtualenv.py
RealstatsModelRollout/tests/: __init__.py
docs/: _config.yml  api.rst  changelog.md  conf.py  index.md  index.rst  readme.md  usage.md
docs/classes/: auth.md  globalfunctions.md  versioning.md  vmachine.md
docs/functions/: download_enviro.md  download_file.md  find.md  generate_structure.md  model_predict_request.md  pathisdir.md  start_venv.md  upload_enviro.md
docs/global_functions/: globalfunctions.md
docs/model/: model.md
docs/premade_scripts/: functions.md  init.md  main.md  train.md
docs/validate/: validate.md
docs/versioning/: versioning.md
docs/vmachine/: vmachine.md
docs/vmachine/functions/: start_venv.md  (+2 more)
tests/: __init__.py  settings.py  test_global_functions.py  test_model.py  test_validate.py  test_vamachine.py  test_versioning.py  test_vmachine.py
tutorialenv/: pyvenv.cfg
tutorialenv/Scripts/: activate  activate.bat
(+15 files in other folders)
