[project]
name = "RealstatsModelRollout"
version = "0.0.1"
authors = [
  { name="Bowen Harkema", email="B.harkema@clappform.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/bharkema/RealstatsModelRollout"
"Bug Tracker" = "https://github.com/bharkema/RealstatsModelRollout/issues"